Fix: breakpoint 1440px, avatar size 120px, rename module wrap to d-flex-wrap.

--- a/Practice2-html-css/css/abstracts/_layout.css
+++ b/Practice2-html-css/css/abstracts/_layout.css
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 
-.wrap {
+.d-flex-wrap {
   flex-wrap: wrap;
 }
 
