--- a/Practice2-html-css/css/layouts/_dreamshare-steps.css
+++ b/Practice2-html-css/css/layouts/_dreamshare-steps.css
@@ -45,7 +45,7 @@
 }
 /* End Part 1 content */
 
-@media (max-width: 1440px) {
+@media (max-width: 1439px) {
   .step-content {
     padding: 220px 20px 16px;
   }
