--- a/Practice2-html-css/css/layouts/_header.css
+++ b/Practice2-html-css/css/layouts/_header.css
@@ -32,7 +32,7 @@
 }
 /* HEADER END */
 
-@media (max-width: 1440px) {
+@media (max-width: 1439px) {
   .header {
     margin-bottom: 95px;
   }
