--- a/Practice2-html-css/css/layouts/_partners.css
+++ b/Practice2-html-css/css/layouts/_partners.css
@@ -8,8 +8,8 @@
 }
 
 .avatars {
-  width: 122px;
-  height: 122px;
+  width: 120px;
+  height: 120px;
 }
 
 .partner-name {
@@ -18,7 +18,7 @@
 }
 /* End Part 2 content */
 
-@media (max-width: 1440px) {
+@media (max-width: 1439px) {
   .partners {
     grid-template-columns: repeat(2, minmax(236px, 0.45fr));
   }
